--- a/fileApi/index.html
+++ b/fileApi/index.html
@@ -108,6 +108,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <script src="./main.js"></script>
+    <script src="./script/main.js"></script>
   </body>
 </html>
